<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:background="@drawable/background_pattern_repeat">

  <LinearLayout android:padding="16dp"
                android:paddingBottom="0dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

    <TextView style="@style/Registration.Description"
              android:layout_width="fill_parent"
              android:layout_marginBottom="16dip"
              android:gravity="start"
              android:text="@string/register_xmpp_account_description" />

    <TextView style="@style/Registration.Description"
              android:layout_width="fill_parent"
              android:layout_marginBottom="16dip"
              android:gravity="start"
              android:text="@string/register_xmpp_account_warning" />

    <TextView style="@style/Registration.Description"
              android:layout_width="fill_parent"
              android:gravity="start"
              android:text="@string/register_xmpp_account_choose" />

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dip"
                  android:layout_marginBottom="16dip"
                  android:layout_gravity="right"
                  android:orientation="horizontal">

      <Button
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="5dip"
              android:layout_weight="1"
              android:text="@string/register_xmpp_account_use_a_trusted_server"
              android:id="@+id/trusted_server_button"
              android:enabled="true" />

      <Button
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="5dip"
              android:layout_weight="1"
              android:text="@string/register_xmpp_account_use_my_own_server"
              android:id="@+id/custom_server_button"
              android:enabled="true" />

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_xmpp_account_cancel"
            android:id="@+id/cancel_button"
            android:enabled="true" />

  </LinearLayout>
</ScrollView>
