<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:background="@drawable/background_pattern_repeat">

  <LinearLayout android:padding="16dp"
                android:paddingBottom="0dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

    <TextView style="@style/Registration.Description"
              android:layout_width="fill_parent"
              android:gravity="start"
              android:layout_marginBottom="16dip"
              android:text="@string/register_xmpp_account_it_is_highly_recommended_to_enable_stream_management" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/hostname"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text"
                  android:layout_marginBottom="10dip"
                  android:hint="@string/register_xmpp_account_hostname"
                  android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/port"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="number"
                  android:hint="@string/register_xmpp_account_port"
                  android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dip"
                  android:layout_marginBottom="16dip"
                  android:layout_gravity="right"
                  android:orientation="horizontal">

      <Button
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="5dip"
              android:layout_weight="1"
              android:text="@string/register_xmpp_account_cancel"
              android:id="@+id/cancel_button"
              android:enabled="true" />

      <Button
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginRight="5dip"
              android:layout_weight="1"
              android:text="@string/register_xmpp_account_connect"
              android:id="@+id/connect_button"
              android:enabled="true" />

    </LinearLayout>
  </LinearLayout>
</ScrollView>
